[package]
name = "crumble"
version = "0.9.0"
authors = ["happy_shredder <contact@etage.io>"]
edition = "2018"
license = "GPLv3+"
description = "A robust, minimal library for parsing MIME documents."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.10.0"
lazy_static = "1.4.0"
