[package]
name = "crumble"
version = "0.10.2"
authors = ["happy_shredder <contact@etage.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A robust, minimal library for parsing MIME documents."
documentation = "https://docs.rs/crumble/"
homepage = "https://git.sr.ht/~happy_shredder/crumble"
repository = "https://git.sr.ht/~happy_shredder/crumble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.10.0"
lazy_static = "1.4.0"
